fix button align on small screens

--- a/src/app/producer-search/producer-search.css
+++ b/src/app/producer-search/producer-search.css
@@ -2,3 +2,9 @@
   padding-left: 10%;
   padding-right: 10%;
 }
+
+@media only screen and (max-width: 480px) {
+  .pure-form button[type='reset'] {
+    margin: 0.7em 0 0;
+  }
+}
